--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body {
 #searchbarmic img {
     height: 25px;
     max-width: 100%;
+    border-left: 1px solid #dadce0;
 }
 
 #searchbarlens {
@@ -195,16 +196,14 @@ body {
     content: '';
     display: block;
     position: absolute;
-    width: 100%;
+    width: 50%;
     height: 3px;
     background-color: #4285F4;
-    left: 5px;
     bottom: 0px;
 }
 
 #optionsmenuactive  {
     position: relative;
-    z-index: -1;
 }
 
 #optionsmenu1 #optionsmenuactive a {
@@ -212,6 +211,7 @@ body {
 }
 #optionsmenu1 {
     cursor: pointer;
+    z-index: -1;
 }
 #optionsmenu1 img {
     width: 15px;
@@ -299,7 +299,7 @@ body {
     color: rgb(82, 82, 82);
 }
 
-.hero-page-content p img {
+.hero-page-content p a img {
     width: 20px;
     margin-bottom: -5px;
     opacity: .7;
@@ -317,7 +317,7 @@ body {
     border-radius: 30px;
     padding: 11px 19px;
     text-decoration: none;
-    background-color: rgb(231,231,234);
+    background-color: #e2eeff;
     border: none;
     cursor: pointer;
 }
@@ -326,7 +326,7 @@ body {
     text-decoration: none; 
     font-size: 14px;
     line-height: 16px;
-    color: rgb(98, 97, 99);
+    color: #1a73e8;;
 }
 
 .hero-page-content p img:hover {
@@ -334,19 +334,25 @@ body {
 }
 
 .btn button:hover, .hero-page-content p img:hover {
-    background-color: rgb(213, 212, 214);
+    background-color: #c2dbff;;
 }
 
 .btn .btna {
-    border: 1px solid rgb(98, 97, 99);
+    border: 1px solid #1a73e8;
 }
 
 .image-container {
+    z-index: -1;
     display: flex;
     flex-direction: row;
     gap: 20px; 
     position: relative;
-    background: linear-gradient(90deg, rgba(242, 250, 246, 1) 0%, rgba(233, 245, 246, 1) 21%, rgba(229, 242, 246, 1) 53%, rgba(241, 249, 246, 1) 86%, rgba(241, 248, 246, 1) 100%);
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(240, 246, 255, 1) 50%,
+      rgba(255, 255, 255, 1) 100%
+    );
     max-height: 318px;
     max-width: 1121px;
     min-height: 302px;
@@ -370,7 +376,7 @@ body {
 }
 
 .messi-image {
-    z-index: 1;
+    /* z-index: 1; */
     bottom: 0;
     display: grid;
     grid-gap: 2px;
@@ -444,7 +450,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    background-color: rgb(231,231,234);
+    background-color: #e2eeff;
     width: 20%;
     height: 86%;
     font-size: 14px;
@@ -480,8 +486,7 @@ td:not(.card){
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    background-color: rgb(231,231,234);
-    z-index: 1;
+    background-color: #e2eeff;
     border-radius: 20px;
     height: 35%;
     width: 9%;
@@ -512,7 +517,6 @@ td:not(.card){
 }
 
 .news {
-    z-index: 1;
     background: #fff;
     position: relative;
     display: flex;
@@ -981,9 +985,6 @@ details .abtlionel img {
 
 .relatedlists {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 300px;
     gap: 20px;
 }
 
@@ -992,13 +993,10 @@ details .abtlionel img {
     background-color: #f1f3f4;
     border-radius: 25px;
     color: #202124;
-    width: 250px;
-    height: 36px;
-    padding-left: 10px;
-    padding-top: 10px;
-    display: flex;
-    flex-direction: row;
-    gap: 7px;
+    width: 225px;
+    gap: 5px;
+    align-items: center;
+    padding: 14px 20px
 }
 
 .relatedlists ul li:hover {
@@ -1007,7 +1005,6 @@ details .abtlionel img {
 
 .pagelist {
     list-style: none;
-    color: rgb(29, 135, 255);
     display: flex;
     flex-direction: row;
     font-size: 12px;
@@ -1020,7 +1017,7 @@ details .abtlionel img {
     color:#4285F4
 }
 
-.pagelist a:hover {
+.pagelist a:hover :not(.pagelistfirst){
     text-decoration: underline;
 }
 
@@ -1031,7 +1028,8 @@ details .abtlionel img {
     right: 12px;
     top: -35px;
     color: rgb(29, 135, 255);
-    font-size: 20px;
+    font-size: 16px;
+    font-weight: 600;
     transform: scale(0.7, 1.2);
 }
 
@@ -1051,6 +1049,7 @@ details .abtlionel img {
 .pagelistfirst {
     margin-left: 20px;
     font-size: 13px;
+    color: #202124;
 }
 
 .pagelistnumber::before, .pagelistfirst::before {
@@ -1109,7 +1108,8 @@ details .abtlionel img {
     left: 5px;
     top: -35px;
     color: rgb(29, 135, 255);
-    font-size: 20px;
+    font-size: 16px;
+    font-weight: 600;
     transform: scale(0.7, 1.2);
 }
 
