--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ html, body {
 }
 
 body {
-    min-height: 100%;
+    max-width: 100vw;
+    max-height: 100%;
     position: relative;
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
@@ -35,6 +36,7 @@ body {
     background-color: white;
     box-shadow: 0 1px 6px 0 rgb(32 33 36 / 28%);
     border: 0;
+    z-index: 2;
 }
 
 #logo {
@@ -54,7 +56,7 @@ body {
     bottom: 5px;
     overflow: hidden;
     display: flex;
-    z-index: 100;
+    /* z-index: 100; */
     background: #fff;
 }
 
@@ -209,10 +211,11 @@ body {
 #optionsmenu1 #optionsmenuactive a {
     color: #4285F4;
 }
+
 #optionsmenu1 {
     cursor: pointer;
-    z-index: -1;
 }
+
 #optionsmenu1 img {
     width: 15px;
     opacity: .7;
@@ -278,7 +281,6 @@ body {
     color: #70757A;
 }
 
-
 .hero-page { 
     display: flex;
     gap: 2rem;
@@ -322,7 +324,7 @@ body {
     cursor: pointer;
 }
 
-.btn button a {
+.btn button  {
     text-decoration: none; 
     font-size: 14px;
     line-height: 16px;
@@ -342,7 +344,6 @@ body {
 }
 
 .image-container {
-    z-index: -1;
     display: flex;
     flex-direction: row;
     gap: 20px; 
@@ -376,7 +377,6 @@ body {
 }
 
 .messi-image {
-    /* z-index: 1; */
     bottom: 0;
     display: grid;
     grid-gap: 2px;
@@ -527,6 +527,10 @@ td:not(.card){
     left: 127%;
     top: 104%; 
     font-size: .9rem;
+}
+
+.news a {
+    color: #4D5156;
 }
 
 .news :nth-child(2) {
@@ -729,9 +733,12 @@ td:not(.card){
  background-color: #dddedf;
 }
 
-.more-news button {
+.more-news button  {
     background-color: inherit;
     border: 0;
+}
+
+.more-news a {
     color: #202124;
 }
 
@@ -841,8 +848,6 @@ details > summary {
     padding-top: 10px;
 }
 
-/* .video1:not(#lastvid) */
-
 .videoa {
     position: relative;
 }
@@ -899,7 +904,7 @@ details > summary {
     border-radius: 3px;
 }
 
-.searchresult h2, details h2 {
+.searchresult h2 a, details h2 {
     font-size: 19px;
     line-height: 18px;
     font-weight: normal;
